force-app/main/default/objects/MD_Appraisal_Item__c/MD_Appraisal_Item__c.object-meta.xml
<CustomObject>
    <label>MD Appraisal Item</label>
    <nameField>
        <label>MD Appraisal Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD Appraisal Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>