force-app/main/default/objects/MD_Appraisal_Item__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <length>3</length>
    <type>Text</type>
</CustomField>