force-app/main/default/objects/MD_Appraisal_Item__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>