force-app/main/default/objects/MD_Appraisal_Item__c/fields/Form_Description__c.field-meta.xml
<CustomField>
    <fullName>Form_Description__c</fullName>
    <formula>MD_Appraisal_Subject__r.MD_Appraisal_Form__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form_Description</label>
    <type>Text</type>
</CustomField>