force-app/main/default/objects/MD_Appraisal_Item__c/fields/Form_Number__c.field-meta.xml
<CustomField>
    <fullName>Form_Number__c</fullName>
    <formula>MD_Appraisal_Subject__r.MD_Appraisal_Form__r.Name</formula>
    <label>Form Number</label>
    <type>Text</type>
</CustomField>