force-app/main/default/objects/MD_Appraisal_Item__c/fields/MD_Appraisal_Subject__c.field-meta.xml
<CustomField>
    <fullName>MD_Appraisal_Subject__c</fullName>
    <label>MD Appraisal Subject</label>
    <referenceTo>MD_Appraisal_Subject__c</referenceTo>
    <relationshipLabel>MD Appraisal Items</relationshipLabel>
    <relationshipName>MD_Appraisal_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>