force-app/main/default/objects/MD_Appraisal_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>FreeText</fullName>
            </value>
            <value>
                <fullName>Rating</fullName>
            </value>
            <value>
                <fullName>YesNo</fullName>
            </value>
            <value>
                <fullName>YesNoNA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>