force-app/main/default/objects/MD_Appraisal_Item__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <formula>MD_Appraisal_Subject__r.MD_Appraisal_Form__r.Version__c</formula>
    <label>Version</label>
    <type>Text</type>
</CustomField>